# rust-study

./: Cargo.toml  hamin.txt
config/: local.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/api/: mod.rs  user.rs
src/model/: user.rs
test/: health.rs
tests/: health.rs
tests/api/: health.rs  helpers.rs  main.rs  user.rs
