[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1"
anyhow = "1.0"
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = "1.0"
serde-aux = "4.0"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }